# musixmatch-rs

./: Cargo.toml  LICENSE  README.md
lib/: marcos.rs  mod.rs  musicabgleich.rs
src/: builder.rs  client.rs  enums.rs  lib.rs  macros.rs  main.rs  structs.rs
src/lib/: builder.rs  enums.rs  marcos.rs  mod.rs  musicabgleich.rs  musixmatch.rs  struct.rs  structs.rs  utils.rs
