[package]
name = "musixmatch"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
path = "src/lib/mod.rs"

[features]
marcos = ["dep:default-args"]

[dependencies]
api-request-utils-rs =  "0.1.8"
# Cuz im lazy 
strum = { version = "0.25", features = ["derive"] }

#marocs feature
default-args = { version = "1.0.0" , optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }