[package]
name = "musixmatch"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "A lightweight and intuitive library for accessing musixmatch api in rust"
documentation = "https://docs.rs/musixmatchr"
repository = "https://github.com/Deaths-Door/musixmatch-rs"
homepage = "https://github.com/Deaths-Door/musixmatch-rs"
license = "MIT OR Apache-2.0"
keywords = ["musixmatch","api","lyrics","search","music"]

[lib]
path = "src/lib/mod.rs"

[features]
marcos = ["dep:default-args"]

[dependencies]
api-request-utils-rs =  "0.1.8"
# Cuz im lazy 
strum = { version = "0.25", features = ["derive"] }

#marocs feature
default-args = { version = "1.0.0" , optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }