[package]
name = "musixmatch"
version = "0.1.3"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "A lightweight and intuitive library for accessing musixmatch api in rust"
documentation = "https://docs.rs/musixmatch"
repository = "https://github.com/Deaths-Door/musixmatch-rs"
homepage = "https://github.com/Deaths-Door/musixmatch-rs"
license = "MIT OR Apache-2.0"
keywords = ["musixmatch","api","lyrics","search","music"]

[features]
marcos = ["dep:default-args"]

[dependencies]
# For API
api-request-utils-rs =  "0.2.5"

# For enums From and Display Traits
strum = { version = "0.25", features = ["derive"] }

# For getters and setters for structs 
getset = "0.1.2"

# For Macros Features
default-args = { version = "1.0.0" , optional = true }